--- a/aulasProgWeb/Card/index.html
+++ b/aulasProgWeb/Card/index.html
@@ -12,13 +12,23 @@
                 <div class="div-card-img">
                     <img src="img/caneta.webp">
                 </div>
-                
+
+            </div>
+
+            <div class="div-card">
+                <div class="div-card-img">
+                    <img src="img/caneta.webp">
+                </div>
+
+            </div>
+
+            <div class="div-card">
+                <div class="div-card-img">
+                    <img src="img/caneta.webp">
+                </div>
 
 
             </div>
-             
-
-
 
         </div>
 
